@@ -1,3 +1,7 @@
+2013-11-18  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Dropped django-avatar support.
+
 2013-11-17  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* openid: First, last and full name are now also queried together
